--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "~antd/dist/antd.css";
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +18,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.ul-list-spread {
+  column-count: 4;
+}
+
+@media (max-width: 400px) {
+  .ul-list-spread {
+    column-count: 2;
+  }
 }
