--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "./custom-antd.css";
+@import './custom-antd.css';
 
 html,
 body {
@@ -22,6 +22,10 @@ a {
 
 .ul-list-spread {
   column-count: 4;
+}
+
+button:focus {
+  outline: none;
 }
 
 @media (max-width: 450px) {
